[package]
name = "tempdfs"
version = "0.1.0"
authors = ["yuanpeixuan <yuanpeixuan@115.com>"]

[dependencies]
futures = "0.1.14"
tokio-io = "0.1"
tokio-core = "0.1"
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "0.13.4"
rmp = "0.8.6"
rust-crypto = "^0.2"
toml = "0.4"
hyper = "0.11"
log = "0.3"
env_logger = "0.3"
rocksdb = "0.6.0"
